align items and fix animation unsmooth in FF

--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -53,6 +53,8 @@
 
   &__value {
     position: relative;
+    display: flex;
+    align-items: center;
     width: 100%;
 
     &::after {
@@ -65,6 +67,10 @@
       pointer-events: none;
       z-index: 1;
       background: linear-gradient(90deg, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
+    }
+
+    .selector {
+      margin: 0 3px 0 0;
     }
 
     .selector ~ .field__input {
